# S3lf-c0n8ci0us

./: .dockerignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  ai_reasoning.py  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml
cognitive_core/: Cargo.toml
cognitive_core/src/: auto_tuner.rs  diagnostic_engine.rs  file_parser.rs  framework_router.rs  lib.rs  main.rs  self_audit.rs  stream_monitor.rs  telemetry.rs
conscious_surface/: __init__.py  app.py  authentication.py  autonomous_nav.py  biological_bridge.py  biometric_bridge.py⁠  dashboard_charts.py  document_ui.py  framework_manager.py  ingestion_bridge.py  master_controller.py  memory_manager.py  neural_visualizer.py  perception_engine.py  philosophy_engine.py  planetary_render.py  plugin_loader.py  reactive_agent.py  rocket_science_nav.py  security_nexus.py  setup_bridge.sh  telemetry_bridge.py  thought_matrix.py
conscious_surface/biosample_ingest/: __init__.py  processor.py
meta_learning/: recursive_optimizer.py
subconscious_lib/: cynefin_framework.json⁠  design_thinking.json  error_correction.json  first_principles.json  intuition_heuristics.json  mece_framework.json  root_cause.json  systems_analysis.json
tests/: test_audit.py  test_memory.py  test_router.rs
