[package]
name = "cognitive_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# For ultra-fast JSON parsing of Sol-Plex frameworks
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For zero-latency asynchronous task management
tokio = { version = "1.0", features = ["full"] }

# For exposing Rust's power to the Python UI layer later
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
