[package]
name = "cognitive_core"
version = "0.1.0"
edition = "2021"
description = "High-velocity Rust core for S3lf-c0n8ci0us"

[lib]
name = "cognitive_core"
# "cdylib" is strictly required by Maturin to build a dynamic library that Python can import.
crate-type = ["cdylib"]

[dependencies]
# The "extension-module" feature tells PyO3 we are building a module to be imported by Python.
pyo3 = { version = "0.21.0", features = ["extension-module"] }
