[package]
name = "cognitive_core"
version = "0.1.0"
edition = "2021"
description = "High-velocity Rust core for S3lf-c0n8ci0us"

[lib]
name = "cognitive_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
